fixed twitter feed overflow

--- a/index.css
+++ b/index.css
@@ -3,6 +3,7 @@
 body {
     margin-top: 60px; /* to make room for the non-fixed navbar */
 	max-height: 100%;
+    overflow-x: hidden;
 /*	background-color: gray;*/
 }
 #carousel-twitter {
@@ -25,10 +26,7 @@ body {
     background-color: #333;
     padding-left: 0;
     margin-top: -20px;
-    margin-left: 0;
     max-height: 500px;
-    overflow: hidden;
-    height: 100%;
 }
 
 
@@ -266,6 +264,7 @@ body {
     background-color: #021C2A;
     border: 2px solid #06466A;
     border-radius: 5px;
+    min-height: 200px;
 }
 #footer .bin1 {
     margin-right: 20px; /*so that the two bins aren't touching */
